clean up , some sonar remarks do make sense...