@@ -1,28 +1,28 @@
 /**
- * 
+ *
  *  http://www.digitalekabeltelevisie.nl/dvb_inspector
- * 
+ *
  *  This code is Copyright 2009-2012 by Eric Berendsen (e_berendsen@digitalekabeltelevisie.nl)
- * 
+ *
  *  This file is part of DVB Inspector.
- * 
+ *
  *  DVB Inspector is free software: you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
  *  the Free Software Foundation, either version 3 of the License, or
  *  (at your option) any later version.
- * 
+ *
  *  DVB Inspector is distributed in the hope that it will be useful,
  *  but WITHOUT ANY WARRANTY; without even the implied warranty of
  *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  *  GNU General Public License for more details.
- * 
+ *
  *  You should have received a copy of the GNU General Public License
  *  along with DVB Inspector.  If not, see <http://www.gnu.org/licenses/>.
- * 
+ *
  *  The author requests that he be notified of any application, applet, or
  *  other binary that makes use of this code, but that's more out of curiosity
  *  than anything and is not required.
- * 
+ *
  */
 
 package nl.digitalekabeltelevisie.controller;
@@ -31,9 +31,9 @@ import java.awt.Paint;
 
 /**
  * @author Eric Berendsen
- * 
+ *
  * Used as a label for the Charts as produced by jfreechart..
- * 
+ *
  */
 
 @SuppressWarnings("rawtypes")
@@ -56,7 +56,7 @@ public class ChartLabel implements Comparable {
 
 	/*
 	 * (non-Javadoc)
-	 * 
+	 *
 	 * @see java.lang.Comparable#compareTo(java.lang.Object)
 	 */
 	public int compareTo(final Object o) {
@@ -67,7 +67,7 @@ public class ChartLabel implements Comparable {
 			throw new ClassCastException();
 		}
 
-		return new Short(this.pid).compareTo(((ChartLabel) o).getPid());
+		return  Short.valueOf(this.pid).compareTo(((ChartLabel) o).getPid());
 	}
 
 	@Override
